--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To-Do List App</title>
+    <title>To-Do-List-App</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -14,9 +14,6 @@
           <button onclick="addTask()" >Add</button>
         </div>
         <ul id="list-container">
-          <!-- <li class="checked">Task 1</li>
-          <li>Task 2</li>
-          <li>Task 3</li> -->
         </ul>
       </div>
     </div>
